--- a/Nono.yaml
+++ b/Nono.yaml
@@ -1,20 +1,24 @@
 scheme: "Nono"
 author: "elmotec"
 
-base00: "2a4759"  # default background
-base01: "4a677c"  # Lighter Background (Used for status bars, line number and folding marks)
-base02: "597b8f"  # Selection Background
-base03: "84a0b0"  # Comments, Invisibles, Line Highlighting
-base04: "9cb1be"  # Dark Foreground (Used for status bars)
-base05: "b5c6ce"  # Default Foreground, Caret, Delimiters, Operators
-base06: "ccd7dc"  # Light Foreground (Not often used)
-base07: "e6ece6"  # Light Background (Not often used)
+# Generated with the help of https://colorkit.co
 
-base08: "CC7A7A"  # Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted (Red)
-base09: "B38324"  # Integers, Boolean, Constants, XML Attributes, Markup Link Url
-base0A: "CFCF3E"  # Classes, Markup Bold, Search Text Background
-base0B: "198019"  # Strings, Inherited Class, Markup Code, Diff Inserted (Green)
-base0C: "8FA3CC"  # Support, Regular Expressions, Escape Characters, Markup Quotes
-base0D: "476FB3"  # Functions, Methods, Attribute IDs, Headings
-base0E: "8FCCB8"  # Keywords, Storage, Selector, Markup Italic, Diff Changed
-base0F: "B57EAC"  # Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
+# https://colorkit.co/palette/2a414d-476068-9ebbb6-706e59-d4c8b3-c4e3d8-e2f1ec-ffffff/
+base00: "2a414d"  # default background
+base01: "476068"  # Lighter Background (Used for status bars, line number and folding marks)
+base02: "9ebbb6"  # Selection Background
+base03: "706e59"  # Comments, Invisibles, Line Highlighting
+base04: "d4c8b3"  # Dark Foreground (Used for status bars)
+base05: "c4e3d8"  # Default Foreground, Caret, Delimiters, Operators
+base06: "e2f1ec"  # Light Foreground (Not often used)
+base07: "ffffff"  # Light Background (Not often used)
+
+# https://colorkit.co/palette/c7522a-e0b460-dede3e-77bf77-d1b7d4-7d96c6-c67d96-476fb3/
+base08: "c7522a"  # Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted (Red)
+base09: "e0b460"  # Integers, Boolean, Constants, XML Attributes, Markup Link Url
+base0A: "dede3e"  # Classes, Markup Bold, Search Text Background
+base0B: "77bf77"  # Strings, Inherited Class, Markup Code, Diff Inserted (Green)
+base0C: "d1b7d4"  # Support, Regular Expressions, Escape Characters, Markup Quotes
+base0D: "7d96c6"  # Functions, Methods, Attribute IDs, Headings
+base0E: "c67d96"  # Keywords, Storage, Selector, Markup Italic, Diff Changed
+base0F: "476fb3"  # Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?>
